# ClipZen

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  DESIGN_UPGRADE.md  FINAL_CHECKLIST.md  LICENSE  OPTIMIZATION.md  PROGRESS.md  PROJECT_OVERVIEW.md  README.md  RELEASE_NOTES.md  SETUP.md  TASKS_TAobao.md  eslint.config.mjs  index.html  package-lock.json  package.json  vite.config.mts  vite.config.ts
.github/workflows/: build-release.yml  build.yml
docs/: COMMUNITY.md  CUSTOMER_SERVICE.md  DETAIL_PAGE.md  GSTACK_GUIDE.md  TAOBAO_CHECKLIST.md  TAOBAO_LISTING.md  USER_MANUAL.md  hwbd_standard_testcases.md  hwbd_standard_testcases.xlsx  hwbd_testcases.xlsx  hwbd_testcases_final.xlsx  hwbd_testcases_fixed.xlsx  index.html  main-images-generator.html  ~$hwbd_testcases_final.xlsx  货权自动绑定.md
scripts/: generate-main-images.js  generate_hwbd_standard_testcases.py  generate_hwbd_testcases.py  generate_licenses.js  licenses_20260312111755_standard.csv  licenses_20260312112929_standard.csv  licenses_20260312113052_standard.csv  licenses_20260312113309_standard.csv  licenses_20260312113310_enterprise.csv  licenses_20260312113310_family.csv  verify_license.js
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  clipzen.db  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: clipboard.rs  commands.rs  lib.rs  license.rs  main.rs  settings.rs  storage.rs  window.rs
src/components/: DataManager.tsx  ItemDetail.tsx  LicenseDialog.tsx  PasswordDialog.tsx  SettingsPanel.tsx  TagFilter.tsx  TagManager.tsx
src/hooks/: useClipboard.ts  useI18n.ts
(+9 files in other folders)
