[package]
name = "clipzen"
version = "0.1.0"
description = "小安剪贴板 - ClipZen"
authors = ["lcb"]
edition = "2021"

[lib]
name = "clipzen_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
arboard = "3.4"
rusqlite = { version = "0.31", features = ["bundled"] }
dirs = "5.0"
chrono = "0.4"
uuid = { version = "1.10", features = ["v4"] }
